<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/launch_application"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:src="@mipmap/ic_notification"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/fragment_horizontal_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:gravity="center_vertical"
                android:text="@string/app_name"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:layout_weight="1"
                android:textColor="@android:color/white"
                android:text="@string/running"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/close_server"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="center_vertical"
        android:layout_marginRight="@dimen/fragment_horizontal_margin"
        android:background="@drawable/notify_button_bg"
        android:textColor="@android:color/white"
        android:text="@string/close_server"
        android:textSize="14sp"
        />

</LinearLayout>