<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/devider_content_height"
        android:background="@color/devider_back">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/fragment_horizontal_margin"
            android:text="@string/file_category" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/top_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="30dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btn_movie"
                    android:onClick="onClick"
                    android:layout_width="@dimen/category_icon_size"
                    android:layout_height="@dimen/category_icon_size"
                    android:layout_gravity="center_horizontal"
                    android:background="@mipmap/category_icon_video" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/file_category_video"
                    android:textColor="@color/tab_selected"
                    android:textSize="17sp"
                    android:textStyle="bold" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="30dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btn_music"
                    android:onClick="onClick"
                    android:layout_width="@dimen/category_icon_size"
                    android:layout_height="@dimen/category_icon_size"
                    android:layout_gravity="center_horizontal"
                    android:background="@mipmap/category_icon_music" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/file_category_music"
                    android:textColor="@color/tab_selected"
                    android:textSize="17dp"
                    android:textStyle="bold" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="30dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btn_photo"
                    android:onClick="onClick"
                    android:layout_width="@dimen/category_icon_size"
                    android:layout_height="@dimen/category_icon_size"
                    android:layout_gravity="center_horizontal"
                    android:background="@mipmap/category_icon_image" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/file_category_image"
                    android:textColor="@color/tab_selected"
                    android:textSize="17dp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="10dp"
            android:layout_weight="5"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="30dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btn_doc"
                    android:onClick="onClick"
                    android:layout_width="@dimen/category_icon_size"
                    android:layout_height="@dimen/category_icon_size"
                    android:layout_gravity="center_horizontal"
                    android:background="@mipmap/category_icon_document" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/file_category_document"
                    android:textColor="@color/tab_selected"
                    android:textSize="17dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="30dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btn_apk"
                    android:onClick="onClick"
                    android:layout_width="@dimen/category_icon_size"
                    android:layout_height="@dimen/category_icon_size"
                    android:layout_gravity="center_horizontal"
                    android:background="@mipmap/category_icon_application" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/file_category_application"
                    android:textColor="@color/tab_selected"
                    android:textSize="17dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="30dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btn_rar"
                    android:onClick="onClick"
                    android:layout_width="@dimen/category_icon_size"
                    android:layout_height="@dimen/category_icon_size"
                    android:layout_gravity="center_horizontal"
                    android:background="@mipmap/category_icon_compress" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/file_category_compress"
                    android:textColor="@color/tab_selected"
                    android:textSize="17sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/devider_content_height"
        android:background="@color/devider_back">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/fragment_horizontal_margin"
            android:text="@string/file_directory_browsing" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/load_storage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/fragment_horizontal_margin">

        <ImageView
            android:layout_width="@dimen/item_icon_size"
            android:layout_height="@dimen/item_icon_size"
            android:layout_gravity="center"
            android:src="@mipmap/ic_classify_sdcard" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/fragment_horizontal_margin"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/file_mobile_storage"
            android:textColor="@color/tab_selected" />

        <ImageView
            android:layout_width="@dimen/item_icon_size"
            android:layout_height="@dimen/item_icon_size"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/fragment_horizontal_margin"
            android:src="@mipmap/itemarrow" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/devider_back">

        <Button
            android:id="@+id/view_shared_files_list"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_button_height"
            android:layout_margin="@dimen/fragment_horizontal_margin"
            android:background="@color/colorAccent"
            android:text="@string/file_scan_shared_files"
            android:layout_alignParentBottom="true"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </RelativeLayout>


</LinearLayout>